src/components/BetDetailsModal/components/BetResultsPage/BetResultsPage.module.scss
@import '../../../../styles/shared';

.container {
  @include media-breakpoint-up(md) {
    display: flex;
  }
}

.bet {
  &__results {
    margin: 0 auto 2.5rem;

    @include media-breakpoint-up(md) {
      margin: 0 2rem 0 0;
      padding: 0;
      flex-grow: 1;
      display: flex;
      justify-content: center;
    }

    &--dice {
      padding: 0 1rem;
      max-width: 450px;

      @include media-breakpoint-up(md) {
        margin: 0 2rem 0 0;
        max-width: unset;
      }
    }

    &--mines,
    &--goals {
      max-width: 381px;

      @include media-breakpoint-up(xl) {
        max-width: unset;
      }
    }

    &--clams {
      max-width: 435px;
    }
  }

  &__details {
    @include media-breakpoint-up(md) {
      width: 300px;
      align-self: center;
      justify-self: flex-end;
      flex-shrink: 0;
    }
  }
}

.empty {
  height: 316px;
}

